fixed a minor import issue java.util.stream.Collectors